# singu

./: install.xml  setup.bat
indra/: CMakeLists.txt  develop.py
indra/aistatemachine/: aistatemachine.cpp
indra/cmake/: 00-Common.cmake  APR.cmake  Audio.cmake  BerkeleyDB.cmake  Boost.cmake  BuildVersion.cmake  CARes.cmake  CMakeLists.txt  CURL.cmake  Colladadom.cmake  CopyBackToSource.cmake  CopyWinLibs.cmake.in  DBusGlib.cmake  DirectX.cmake  DownloadPrebuilt.cmake.in  ELFIO.cmake  EXPAT.cmake  FMODEX.cmake  FMODSTUDIO.cmake  FreeType.cmake  GLOD.cmake  GStreamer010Plugin.cmake  GoogleBreakpad.cmake  GooglePerfTools.cmake  Hunspell.cmake  JPEG.cmake  JsonCpp.cmake  LLAddBuildTest.cmake  LLSharedLibs.cmake  LLWindow.cmake  Linking.cmake  NDOF.cmake  OPENAL.cmake  OpenGL.cmake  OpenSSL.cmake  PNG.cmake  PulseAudio.cmake  QuickTimePlugin.cmake  UI.cmake  Variables.cmake  (+3 more)
indra/copy_win_scripts/: start-client.py
indra/llappearance/: llavatarappearance.cpp  llavatarappearance.h  llavatarjoint.cpp  llavatarjoint.h  llavatarjointmesh.cpp  lldriverparam.cpp  lldriverparam.h  llpolymesh.cpp  llpolymorph.cpp  llpolymorph.h  llpolyskeletaldistortion.cpp  llpolyskeletaldistortion.h  lltexglobalcolor.cpp  lltexlayer.cpp  lltexlayerparams.cpp  llviewervisualparam.cpp  llwearable.cpp  llwearable.h  llwearabledata.cpp  llwearabledata.h  llwearabletype.cpp  llwearabletype.h
indra/llaudio/: CMakeLists.txt  llaudiodecodemgr.cpp  llaudioengine.cpp  llaudioengine_fmodex.cpp  llaudioengine_fmodex.h  llaudioengine_fmodstudio.cpp  llaudioengine_fmodstudio.h  lllistener_fmodstudio.cpp  lllistener_fmodstudio.h  lllistener_openal.cpp  llstreamingaudio_fmodex.cpp  llstreamingaudio_fmodex.h  llstreamingaudio_fmodstudio.cpp  llvorbisencode.cpp
indra/llcharacter/: llanimationstates.h  llbvhloader.cpp  llcharacter.cpp  llcharacter.h  lleditingmotion.cpp  llheadrotmotion.cpp  lljoint.cpp  lljoint.h  llkeyframemotion.cpp  llkeyframewalkmotion.cpp  llmotion.h  llmotioncontroller.cpp  llmultigesture.cpp  llmultigesture.h  lltargetingmotion.cpp  llvisualparam.h
indra/llcommon/: CMakeLists.txt  aithreadsafe.h  indra_constants.h  linden_common.h  llapp.cpp  llapr.cpp  llapr.h  llatomic.h  llbase64.cpp  lldate.cpp  llerror.cpp  llerror.h  (+39 more)
scripts/: install.py
(+631 files in other folders)
